# AutoVolume

./: .gitignore  CMakeLists.txt
GUI/: gui.cpp
GUI/Logic/MainWindow/: MainWindow.cpp  MainWindow.h
GUI/Logic/SimpleWidget/: SimpleWidget.cpp  SimpleWidget.h
GUI/UI/MainWindow/: MainWindow.ui
GUI/UI/SimpleWidget/: SimpleWidget.ui
GUI/UI/Test/: ComplexWidget.ui
ImageLoader/: ImageLoader.cpp  ImageLoader.h  image_loader.cpp
